# vite-react-icp-rust

./: .gitignore  .gitpod.yml  README.md  dfx.json  package-lock.json  package.json  vite.config.ts
backend/: Cargo.toml  backend.did
backend/src/: lib.rs
src/: App.css  App.tsx  index.html
