[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# [profile.release]
# lto = true
# opt-level = 'z'

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
candid = "0.8.4"
ic-cdk = "0.7.4"
ic-cdk-macros = "0.6.10"
anyhow = "1.0.71"
wasmi = "0.29.0"
wat = "1.0.63"
